--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
           ottimizzato il tutto, avremo graggiunto il nostro obiettivo ed essere
           stati dei veri developers come loro:
         </div>
-        <div class="video">
+        <div id="video">
           <video height="185" controls>
             <source src="/assets/video/video.mp4" type="video/mp4" />
           </video>
